After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794464 - NetworkManager incorrectly reports limited connectivity
NetworkManager incorrectly reports limited connectivity
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-03-18 19:45 UTC by Serban Iorga
Modified: 2018-03-22 04:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (469 bytes, patch)
2018-03-18 19:45 UTC, Serban Iorga
none Details | Review

Description Serban Iorga 2018-03-18 19:45:41 UTC
Created attachment 369844 [details] [review]
patch

How to reproduce:

1) Make sure that you have full internet connectivity
2) Execute: nmcli networking connectivity check

Actual Result: "limited"

Expected Result: "full"

I can only reproduce this bug on one computer out of a couple that I work with. I can provide more info about the system if needed.
Comment 1 Serban Iorga 2018-03-18 19:53:05 UTC
The issue seems to be caused by this line:

priv->curl_timer = g_timeout_add (timeout_ms * 1000, curl_timeout_cb, self);

g_timeout_add expects the interval to be passed in milliseconds: https://developer.gnome.org/glib/stable/glib-The-Main-Event-Loop.html#g-timeout-add

Because the timeout_ms is multiplied with 1000, the timer waits too much and timeout_cb gets called before curl_timeout_cb
Comment 2 Thomas Haller 2018-03-19 14:06:26 UTC
yes, the same fix is already for a while pending on review:

https://github.com/NetworkManager/NetworkManager/pull/70

(the branch still breaks CI, that's why it's not merged yet).


Anyway, this fix should go in early and not be blocked by the later parts. I merged part 1 to master:

https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=9c4919be764493b35553583723f77018e7974569

this includes:
https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=bfe60cb7b930fa51dfd7d02cde7d07425b419456

(also backported to nm-1-10 branch)
https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=d29ba1bbbedff2a8eb012aa83eb42eb769c37758


Thanks.