connectivity: fix timeout handling for curl

g_timeout_add() expects the timeout in milliseconds, not seconds.

Reported-by: Serban Iorga <serban300@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=794464

Fixes: 7307dea9c4da6cdc53e4c23c4ce07cf51bd0c4b7